feat: corrected and working virtual journal