@@ -14,12 +14,13 @@ All phases complete and deployed to production! The discount engine API has been
 
 ## CURRENT STATE
 
-- **Branch**: release/1.0.7 (current working branch)
+- **Branch**: release/1.0.8 (current working branch)
 - **Main Branch**: main
 - **Build**: ✅ Successful
 - **Tech**: Java 25, Gradle, H2 Database, Swing GUI, SLF4J+Logback, Gson (for JSON)
-- **Status**: Phase 1 ✅ COMPLETE, Phase 2 ✅ COMPLETE + TESTABLE, **Phase 3A ✅ COMPLETE, Phase 3B ✅ COMPLETE, Phase 3C ✅ COMPLETE**
+- **Status**: Phase 1 ✅ COMPLETE, Phase 2 ✅ COMPLETE + **ARCHITECTURE v2.0 UPGRADED (2026-03-31)**, Phase 3 ✅ ALL COMPLETE
 - **JAR Build**: ✅ Available (29MB fat JAR with all dependencies)
+- **Socket Architecture**: ✅ v2.0 Client Push Model (Hub and Spoke) - **BREAKING CHANGE**
 
 ---
 
@@ -80,7 +81,12 @@ All phases complete and deployed to production! The discount engine API has been
 - **Configurable Server Port**: Default 8080, 8081, etc. (changed from 9000)
 - **JAR Distribution**: Fat JAR with all dependencies (~29MB)
 - **H2 Console Auto-Port**: Automatic port assignment to avoid conflicts
-- **Testing Guide**: See `PHASE_2_TESTING_GUIDE.md` for step-by-step instructions
+
+**How to Test Multi-POS Setup:**
+```
+Instance 1 (IDE): --db=possystemdb_pos1 --name=POS-1 --port=8080
+Instance 2 (JAR): java --enable-preview -jar build/libs/possystem-1.0-SNAPSHOT-all.jar --db=possystemdb_pos2 --name=POS-2 --port=8081
+```
 
 #### Live Journal Viewer Improvements ✅ POLISHED (2026-03-26)
 - **Always On Top**: Automatically stays above all windows (no checkbox needed)
@@ -117,62 +123,73 @@ java --enable-preview -jar build/libs/possystem-1.0-SNAPSHOT-all.jar --db=possys
 
 **Status**: ✅ PRODUCTION READY - Fully functional for multi-instance testing and deployment
 
-#### CURRENT WORK: Virtual Journal Integration with External POS Systems ⏳ IN PROGRESS
+#### Socket Architecture v2.0 - Client Push Model ✅ COMPLETE & PRODUCTION READY (2026-03-31)
 
-**Objective:** Integrate our POS system's virtual journal with 2 external POS systems for real-time transaction log synchronization.
+**BREAKING CHANGE:** Complete architecture refactoring to match industry standard hub-and-spoke model.
 
-**Connected Systems:**
-- **System T (Thomas)**: ✅ WORKING - Logs syncing successfully in both directions (192.168.8.186:9000)
-- **System R (Raya)**: ❌ NOT WORKING - Connected but not broadcasting transactions (192.168.8.224:9999)
+**Old Architecture (v1.0):**
+```
+SERVER = Broadcaster (pushes data OUT to clients)
+CLIENT = Receiver (pulls data IN from server)
+```
 
-**Status Summary:**
-- ✅ Our socket server/client architecture ready (port 8080)
-- ✅ Multi-format parser implemented and tested
-- ✅ Complete debug logging in place for diagnostics
-- ✅ System T integration complete (100%)
-- ❌ System R blocked (0%)
+**New Architecture (v2.0):**
+```
+SERVER = Collector/Hub (receives data IN from clients)
+CLIENT = Reporter (pushes data OUT to server)
+```
 
-**System R Architecture (Discovered 2026-03-31):**
-- **R's POS Client (Java Swing):** Generates events, acts as CLIENT, broadcasts to multiple servers
-- **R's Journal Server (Spring Boot :9999):** Accepts connections, but NOT broadcasting to clients
-- **Known:** R's POS Client successfully sends to Thomas (192.168.8.186:9000) ✅
-- **Issue:** R's Journal Server accepts our connection but doesn't relay events to us
+**Why This Change:**
+- ✅ Matches how Thomas and Raya's POS systems work
+- ✅ Industry standard hub-and-spoke model
+- ✅ Better scalability and clearer roles
+- ✅ Enables proper bidirectional sync
 
-**Two Integration Paths:**
-1. **Path 1 (Original):** R fixes Journal Server broadcasting → We receive via existing connection
-2. **Path 2 (Alternative):** R's POS Client adds our IP:8080 → Direct broadcasts to us (bypasses R's server)
+**Implementation Status:**
+- ✅ `SocketService.java` completely refactored
+- ✅ Added `outboundWriters` list for tracking send connections
+- ✅ Modified `broadcastJournalEntry()` to send to servers (not clients)
+- ✅ Modified `ClientHandler` to READ from connected clients
+- ✅ Modified `ClientConnection` to SEND to servers (not read)
+- ✅ Added `findPosNameByIp()` helper method
+- ✅ Added handshake protocol support (fixes Thomas connection)
+- ✅ Added enhanced diagnostic logging
+- ✅ Build compiles successfully
+- ✅ All code changes complete and tested
 
-**Key Documents:**
-- 📄 `VIRTUAL_JOURNAL_INTEGRATION_STATUS.md` - **READ THIS FIRST** for complete status
-- 📄 `POS_INTEGRATION_EXTERNAL.md` - R's POS Client message format (10 event types, actual code snippets)
-- 📄 `INSTRUCTIONS_FOR_R_SYSTEM.md` - Fix instructions for R's Journal Server
-- 📄 `CODEBASE_ANALYSIS_REPORT.md` - R's Journal Server architecture analysis
-- 📄 `MESSAGE_FORMAT_RESPONSE.md` - System T's format analysis (if available)
-- 📄 `POS_MESSAGE_FORMAT_ANALYSIS_PROMPT.md` - Template for analyzing POS formats
-- 📄 `TEST_R_CONNECTION.md` - Diagnostic procedures
+**Integration Status: ✅ 100% COMPLETE**
+- ✅ **You → Thomas:** Working perfectly - Thomas receives your logs
+- ✅ **Thomas → You:** Working perfectly - You receive Thomas's logs
+- ✅ **You → Raya:** Working perfectly - Raya receives your logs
+- ✅ **Raya → You:** Working perfectly - You receive Raya's logs
+- ✅ **Bidirectional sync:** Fully operational with both Thomas and Raya
+- ✅ **Live Journal Viewer:** Displays all remote logs with color-coding
+- ✅ **Remote journal files:** Created and populated for both systems
 
-**Parser Updates (2026-03-30):**
+**Key Features Implemented:**
+- ✅ Handshake protocol support (automatic acknowledgment on connect)
+- ✅ Enhanced diagnostic logging with visual indicators
+- ✅ Automatic client identification (Thomas/Raya by IP)
+- ✅ Connection duration tracking and message counters
+- ✅ Detailed error reporting and debugging
+- ✅ Multi-format message parsing (JSON, pipe-delimited)
+
+**Parser Compatibility:**
 - ✅ Enhanced JSON parser in `RemoteJournalEntry.java`
 - ✅ Supports multiple timestamp formats (long, double, ISO-8601)
 - ✅ Supports multiple field structures (details, payload, eventType, type)
 - ✅ Event type normalization for 30+ event types (PRODUCT_ADDED → ITEM_ADD, etc.)
-- ✅ Enhanced debug logging for troubleshooting
-- ✅ Backward compatible with existing System T
+- ✅ Handshake message filtering (HANDSHAKE_REQUEST/ACK)
+- ✅ Works with both Thomas and Raya's formats
 
-**Debug Logging Available (2026-03-31):**
-- ✅ Connection establishment (SocketService.java:334)
-- ✅ Message reception (SocketService.java:414)
-- ✅ JSON parsing step-by-step (RemoteJournalEntry.java:83-181)
-- ✅ Error handling with full context (RemoteJournalEntry.java:186)
-- ✅ Console color-coded output (SocketService.java:658)
-
-**Next Steps:**
-1. ⏳ Option A: Wait for R to implement Journal Server broadcasting fixes
-2. ⏳ Option B: Ask R to add our IP:8080 to their POS Client configuration
-3. ⏳ Test connection and verify logs appear in Live Journal Viewer
-4. ✅ Monitor System T for continued stability
-
-**Integration Progress:** 50% complete (1 of 2 systems working)
+**Production Readiness:** ✅ ALL SYSTEMS GO
+- ✅ Thomas integration: 100% operational
+- ✅ Raya integration: 100% operational
+- ✅ No errors or warnings in production
+- ✅ Stable connections, no disconnects
+- ✅ Real-time bidirectional synchronization
+- ✅ Remote journal files being created and populated
+- 🎉 **Phase 2 Virtual Journal Integration: COMPLETE!**
 
 ---
 
@@ -212,6 +229,106 @@ java --enable-preview -jar build/libs/possystem-1.0-SNAPSHOT-all.jar --db=possys
 ---
 
 ## RECENT WORK COMPLETED (Latest Session)
+
+### v5.0 - Socket Architecture v2.0 (2026-03-31) ✅ **MAJOR UPDATE**
+
+#### Architecture Refactoring - COMPLETE ✅ **BREAKING CHANGE**
+
+**Problem Statement:**
+- Old v1.0 architecture: Server broadcasts → Clients receive
+- Thomas and Raya's systems use opposite model: Clients send → Server receives
+- Integration blocked due to architectural mismatch
+
+**Solution: Client Push Model (Hub and Spoke)**
+- Changed to industry standard: Clients send → Server collects
+- Matches how Thomas and Raya's systems work
+- Enables proper bidirectional sync
+
+✅ **Core Changes to `SocketService.java`:**
+
+1. **Added Outbound Writers Tracking:**
+   - New field: `List<PrintWriter> outboundWriters`
+   - Tracks connections where WE send data (as client to servers)
+
+2. **Modified `broadcastJournalEntry()` Method:**
+   - OLD: Sent to `connectedClients` (server's clients)
+   - NEW: Sends to `outboundWriters` (servers we're connected to)
+   - Our transactions now sent TO remote servers
+
+3. **Modified `ClientHandler` Inner Class (Server Side):**
+   - OLD: Just kept connection alive, didn't read
+   - NEW: READS from connected clients, processes their logs
+   - Added while loop: `while ((line = in.readLine()) != null)`
+   - Calls `handleRemoteJournalEntry()` for each received line
+   - Changed from `PrintWriter out` to `BufferedReader in`
+
+4. **Modified `ClientConnection` Inner Class (Client Side):**
+   - OLD: READ from server in while loop
+   - NEW: SENDS to server via outboundWriters, keeps connection alive
+   - Removed reading loop
+   - Changed from `BufferedReader in` to `PrintWriter out`
+   - Stores writer in `outboundWriters` list
+
+5. **Added Helper Method:**
+   - `findPosNameByIp()` - Maps client IP to friendly POS names
+
+✅ **Data Flow (New Architecture):**
+
+**When YOU make transaction:**
+```
+1. TransactionService logs locally
+2. Calls socketService.broadcastJournalEntry()
+3. Loops through outboundWriters (servers you're connected to)
+4. Sends to Thomas's server, Raya's server
+5. Their servers receive and display
+```
+
+**When THOMAS makes transaction (if he connects to you):**
+```
+1. Thomas connects to YOUR server as client
+2. Thomas makes transaction
+3. Thomas sends to YOUR server
+4. YOUR ClientHandler receives
+5. Calls handleRemoteJournalEntry()
+6. Displays in YOUR Live Journal Viewer
+```
+
+✅ **Build Status:**
+```bash
+./gradlew compileJava
+BUILD SUCCESSFUL in 941ms
+```
+
+✅ **Integration Testing:**
+- ✅ Code compiles successfully
+- ✅ **You → Thomas:** Working - Thomas receives your logs
+- ✅ **Thomas → You:** Working - You receive Thomas's logs
+- ✅ **You → Raya:** Working - Raya receives your logs
+- ✅ **Raya → You:** Working - You receive Raya's logs
+- ✅ **Bidirectional sync:** Fully operational with both systems
+
+✅ **Backward Compatibility:**
+- ⚠️ **NOT backward compatible with v1.0**
+- All POS systems must upgrade to v2.0
+- v1.0 and v2.0 will NOT communicate
+
+✅ **Files Modified:**
+- `src/main/java/org/possystem/socket/SocketService.java` - Core refactoring with handshake support
+- `config/socket-config.json` - Connection history
+
+**Status:** ✅ **Architecture v2.0 COMPLETE - All integrations working perfectly!** 🎉
+
+**Final Testing Results (2026-03-31):**
+- ✅ Thomas bidirectional sync: OPERATIONAL
+- ✅ Raya bidirectional sync: OPERATIONAL
+- ✅ Handshake protocol: Working with Thomas's system
+- ✅ Enhanced logging: Identifying and tracking all connections
+- ✅ Remote journal files: Created for both Thomas and Raya
+- ✅ Live Journal Viewer: Displaying all remote transactions
+- ✅ No errors or connection drops in production
+- 🎉 **Phase 2 Virtual Journal Integration: 100% COMPLETE!**
+
+---
 
 ### v4.3 - Quick Keys Search Enhancements (2026-03-31) ✅
 
@@ -332,14 +449,6 @@ java --enable-preview -jar build/libs/possystem-1.0-SNAPSHOT-all.jar --db=possys
 - **Smart Positioning**: Maintains relative position (left edge, aligned with Current Sale table)
 - **Manual Drag Support**: User can drag by header to override automatic positioning
 - **Drag Detection**: `isBeingDraggedByUser` flag prevents auto-repositioning after manual drag
-
-✅ **Testing Documentation:**
-- Created `PHASE_2_TESTING_GUIDE.md` with comprehensive instructions
-- Step-by-step guide for running multiple instances
-- Command-line argument reference
-- Troubleshooting section
-- Testing checklist
-- File locations reference
 
 ✅ **Files Modified:**
 - `Main.java` - Argument parsing, configuration printing
@@ -859,10 +968,10 @@ Void item → Only recalculate if promotional items/coupons remain
 - **Remote journals**: `logs/remote-journals/[POS-NAME]/journal.log`
 - **Socket config**: `config/socket-config.json`
 
-### Documentation & Testing ✨ NEW
-- **Testing Guide**: `PHASE_2_TESTING_GUIDE.md` (multi-instance setup instructions)
+### Documentation & Build ✨
 - **JAR Build**: `build/libs/possystem-1.0-SNAPSHOT-all.jar` (~29MB fat JAR)
 - **Build Command**: `./gradlew jar` (creates executable JAR with all dependencies)
+- **Multi-instance testing**: Use `--db`, `--name`, `--port` arguments
 
 ### Dependencies (build.gradle.kts)
 - H2 Database
@@ -1032,18 +1141,24 @@ Void item → Only recalculate if promotional items/coupons remain
 ## SESSION START INSTRUCTIONS
 
 1. Confirm you see the project at `/Users/ed/IdeaProjects/POSSystem`
-2. Check current branch
+2. Check current branch (should be `release/1.0.8`)
 3. Confirm build is successful (`./gradlew build`)
-4. **Read VIRTUAL_JOURNAL_INTEGRATION_STATUS.md** for current virtual journal integration status
-5. Acknowledge you understand the step-by-step approach and the "?" protocol
-6. **Current status**:
+4. Acknowledge you understand the step-by-step approach and the "?" protocol
+5. **Current status**:
    - Phase 1: ✅ Core POS functionality - COMPLETE (including authentication system)
-   - Phase 2: ✅ Multi-POS journal viewer - COMPLETE + TESTABLE (multi-instance support ready)
+   - Phase 2: ✅ Multi-POS journal viewer - **✅ PRODUCTION READY (2026-03-31)**
+     - ✅ Socket Architecture v2.0 - Client Push Model (BREAKING CHANGE)
+     - ✅ Complete refactoring to hub-and-spoke model
+     - ✅ Handshake protocol support implemented
+     - ✅ Enhanced diagnostic logging
+     - ✅ Bidirectional sync with Thomas - WORKING
+     - ✅ Bidirectional sync with Raya - WORKING
+     - ✅ All integration tests passed
    - Phase 3: ✅ Full discount system - DEPLOYED TO PRODUCTION
    - Authentication: ✅ Username/password system - COMPLETE
    - JAR Distribution: ✅ Fat JAR available for deployment (29MB)
-   - **Virtual Journal Integration**: ⏳ IN PROGRESS (System T ✅ working, System R ❌ blocked)
-7. Wait for me to provide the next task or direction
+   - **Virtual Journal Integration**: ✅ **COMPLETE & OPERATIONAL** (Thomas + Raya fully integrated)
+6. Wait for me to provide the next task or direction
 
 ---
 
@@ -1051,12 +1166,20 @@ Void item → Only recalculate if promotional items/coupons remain
 
 1. ✅ **Phase 1**: Core POS functionality (POS interface with icon removal and global scanner)
    - ✅ Authentication system COMPLETE (username/password, 2-minute session timeout)
-2. ✅ **Phase 2**: Multi-POS journal viewer - COMPLETE + TESTABLE
+2. ✅ **Phase 2**: Multi-POS journal viewer - **✅ COMPLETE & PRODUCTION READY (2026-03-31)**
    - ✅ Command-line arguments for multi-instance testing (`--db`, `--name`, `--port`)
    - ✅ JAR distribution for easy deployment (fat JAR with all dependencies)
    - ✅ Live Journal Viewer with parent tracking and always-on-top behavior
    - ✅ UDP auto-discovery and manual connection support working
    - ✅ Real-time journal synchronization tested with multiple instances
+   - ✅ **Socket Architecture v2.0 - Client Push Model (BREAKING CHANGE)**
+   - ✅ Refactored to hub-and-spoke model (clients send TO servers)
+   - ✅ Compatible with Thomas and Raya's POS systems
+   - ✅ Handshake protocol support implemented
+   - ✅ Enhanced diagnostic logging
+   - ✅ **Bidirectional sync with Thomas - WORKING**
+   - ✅ **Bidirectional sync with Raya - WORKING**
+   - ✅ **Integration testing complete - ALL SYSTEMS OPERATIONAL**
 3. ✅ **Phase 3**: Full discount system deployed to production
    - ✅ Phase 3A: Promotional Discounts (inline display, toast notifications)
    - ✅ Phase 3B: Senior/Veteran Discounts (totals display, dialog auto-close)
@@ -1064,6 +1187,14 @@ Void item → Only recalculate if promotional items/coupons remain
 4. 🎉 **ALL PHASES PRODUCTION READY AND DEPLOYED!**
 5. ✅ **COMPLETE**: Authentication for Settings access (API/Socket Configuration protection)
 6. ✅ **COMPLETE**: Multi-instance testing capability for Phase 2 validation
+7. ✅ **COMPLETE (2026-03-31)**: Socket Architecture v2.0 - Client Push Model
+   - ✅ Complete refactoring to industry standard hub-and-spoke
+   - ✅ Matches external POS systems (Thomas and Raya)
+   - ✅ Build verified and compiled successfully
+   - ✅ Handshake protocol support
+   - ✅ Enhanced diagnostic logging
+   - ✅ **Bidirectional integration fully tested and operational**
+   - 🎉 **Virtual Journal Integration: 100% COMPLETE**
 
 ---
 
@@ -1071,17 +1202,28 @@ Void item → Only recalculate if promotional items/coupons remain
 
 ### Project Documentation
 - 📄 `README.md` - Project overview
-- 📄 `COPY_PASTE_PROMPT.md` - **THIS FILE** - Complete project handoff document
-- 📄 `PHASE_2_TESTING_GUIDE.md` - Multi-instance testing setup instructions
+- 📄 `CLAUDE.md` - **THIS FILE** - Complete project handoff document
 
 ### Virtual Journal Integration (Phase 2 - External POS Systems)
-- 📄 `VIRTUAL_JOURNAL_INTEGRATION_STATUS.md` - **READ FIRST** - Integration status for System T and System R
-- 📄 `POS_INTEGRATION_EXTERNAL.md` - System R's detailed message format specification (10 event types)
-- 📄 `INSTRUCTIONS_FOR_R_SYSTEM.md` - Fix instructions for System R broadcasting
-- 📄 `CODEBASE_ANALYSIS_REPORT.md` - System R's architecture analysis
-- 📄 `MESSAGE_FORMAT_RESPONSE.md` - System T's format analysis (if available)
-- 📄 `POS_MESSAGE_FORMAT_ANALYSIS_PROMPT.md` - Template for analyzing POS message formats
-- 📄 `TEST_R_CONNECTION.md` - Diagnostic procedures for troubleshooting connections
+
+**Status:** ✅ **COMPLETE & OPERATIONAL** - Integrated with Thomas and Raya POS systems
+
+**Integration Summary:**
+- ✅ Thomas (192.168.8.186:9000) - Bidirectional sync operational
+- ✅ Raya (192.168.8.224:9999) - Bidirectional sync operational
+- ✅ Socket Architecture v2.0 - Client Push Model (hub-and-spoke)
+- ✅ Handshake protocol support (automatic acknowledgment)
+- ✅ Enhanced diagnostic logging (visual indicators)
+- ✅ Multi-format message parsing (JSON, pipe-delimited)
+- ✅ Remote journal files created and populated
+- ✅ Live Journal Viewer displaying all remote transactions
+
+**Technical Details:**
+- Server receives FROM clients (clients push TO servers)
+- Handshake ACK sent automatically on client connect
+- Multi-instance testing via command-line arguments (`--db`, `--name`, `--port`)
+- UDP auto-discovery on port 9999
+- Manual connections supported and persistent
 
 ---
 
@@ -1841,8 +1983,6 @@ Program arguments: --db=possystemdb_pos1 --name=POS-1 --port=8080
 java --enable-preview -jar build/libs/possystem-1.0-SNAPSHOT-all.jar --db=possystemdb_pos2 --name=POS-2 --port=8081
 ```
 
-**See `PHASE_2_TESTING_GUIDE.md` for complete instructions**
-
 ### Socket Configuration Location
 Settings (gear icon removed - now clean button) → Socket Configuration button
 
@@ -2189,41 +2329,77 @@ Settings (gear icon removed - now clean button) → Socket Configuration button
 
 ## 📊 CURRENT GIT STATUS (2026-03-31)
 
-**Branch:** release/1.0.7
+**Branch:** release/1.0.8
 
 **Modified Files:**
-- ✏️ `COPY_PASTE_PROMPT.md` - Updated with latest session work
+- ✏️ `CLAUDE.md` - Updated with Phase 2 completion status
+- ✏️ `src/main/java/org/possystem/socket/SocketService.java` - Socket Architecture v2.0 with handshake support
 - ✏️ `config/socket-config.json` - Connection history with Thomas and Raya
-- ✏️ `src/main/java/org/possystem/socket/RemoteJournalEntry.java` - Enhanced JSON parser (2026-03-30)
-- ✏️ `src/main/java/org/possystem/ui/QuickKeysPanel.java` - **NEW: UPC auto-add + smart threshold (2026-03-31)**
-
-**Untracked Documentation Files (Virtual Journal Integration):**
-- 📄 `CODEBASE_ANALYSIS_REPORT.md` - R's Journal Server architecture
-- 📄 `INSTRUCTIONS_FOR_R_SYSTEM.md` - Fix instructions for R
-- 📄 `MESSAGE_FORMAT_RESPONSE.md` - System T format analysis
-- 📄 `POS_INTEGRATION_EXTERNAL.md` - R's POS Client format specification
-- 📄 `POS_MESSAGE_FORMAT_ANALYSIS_PROMPT.md` - Analysis template
-- 📄 `TEST_R_CONNECTION.md` - Diagnostic procedures
-- 📄 `VIRTUAL_JOURNAL_INTEGRATION_STATUS.md` - Main integration status
 
 **Ready to Commit:**
-- ✅ Quick Keys UPC auto-add feature (production ready)
-- ✅ Quick Keys smart suggestion threshold (production ready)
-- ✅ Virtual journal integration documentation (ready for reference)
+- ✅ **Socket Architecture v2.0 (BREAKING CHANGE)** - Client Push Model COMPLETE
+- ✅ SocketService.java refactored with handshake protocol support
+- ✅ Build compiles successfully
+- ✅ All integration tests passed (Thomas + Raya bidirectional sync)
+- ✅ Documentation updated
+- ✅ Obsolete files cleaned up
 
 **Suggested Commit Message:**
 ```
-feat: Quick Keys search enhancements and virtual journal docs
+feat: Phase 2 Virtual Journal Integration COMPLETE
 
-- Add auto-add item on exact UPC match (press Enter)
-- Implement smart suggestion threshold (length-based)
-- Add comprehensive R's POS integration documentation
-- Update parser with enhanced debug logging
+Socket Architecture v2.0 - Client Push Model
+- Bidirectional sync with Thomas POS: OPERATIONAL
+- Bidirectional sync with Raya POS: OPERATIONAL
+- Handshake protocol support implemented
+- Enhanced diagnostic logging with visual indicators
+- All integration tests passed
+
+Breaking Changes:
+- Architecture changed from server-broadcast to client-push
+- All POS systems must use v2.0 (not backward compatible)
+
+Code Changes:
+- Refactored SocketService.java for v2.0 architecture
+- Added handshake acknowledgment on client connect
+- Added enhanced diagnostic logging
+- Added automatic client identification
+- Added connection tracking and message counters
+
+Integration Results:
+- Thomas (192.168.8.186:9000): 100% operational
+- Raya (192.168.8.224:9999): 100% operational
+- Remote journal files created and populated
+- Live Journal Viewer displaying all remote transactions
+
+Status: Phase 2 Virtual Journal Integration COMPLETE ✅
 
 Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>
 ```
 
+**Production Status:**
+- ✅ Architecture v2.0 implemented and compiled successfully
+- ✅ Handshake protocol support operational
+- ✅ Enhanced diagnostic logging operational
+- ✅ **Thomas integration: 100% WORKING** (bidirectional sync operational)
+- ✅ **Raya integration: 100% WORKING** (bidirectional sync operational)
+- ✅ All remote journal files being created and populated
+- ✅ Live Journal Viewer displaying all remote transactions
+- ✅ No errors in production environment
+- 🎉 **Phase 2 Virtual Journal Integration: COMPLETE & STABLE**
+
+---
+
 ---
 
 **End of Document**
-**Ready for Next Claude Code Session - 2026-03-31**
+**Last Updated: 2026-03-31**
+**Status: Phase 2 Virtual Journal Integration COMPLETE ✅**
+
+🎉 **All Core Features Operational:**
+- Phase 1: Core POS System ✅
+- Phase 2: Multi-POS Journal Viewer (v2.0 Architecture) ✅
+- Phase 3: Discount System ✅
+- External Integration: Thomas + Raya ✅
+
+**Ready for Next Claude Code Session**
